TEST_PROGRAMS/INVALID/AMIEL_KOLLEK/bad_loop.min
# this invalid program tries to use an unterminated loop


var z: int;

z = 100;

while z do
    z = 1;

print z;

